# NotitiaRust

./: .gitignore  Cargo.toml  README.md
result/: movies.txt
src/: imdb.rs  just_watch.rs  main.rs  tmdb.rs  utils.rs
tests/: imdb_tests.rs  justwatch_tests.rs  tmdb_tests.rs  utils_tests.rs
tests/files/imdb/: title.akas.reduced.es_test.tsv  title.basics.reduced.es_test.tsv  title.ratings_test.tsv
tests/files/justwatch/: test.json  test2.json
tests/files/tmdb/: archive_test.csv  movies_metadata_test.csv
tests/files/utils/: test.tsv
