[package]
name = "NotitiaRust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13.0" }
csv = "1.1"
chrono = "0.4.23"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
